# cells

./: .gitignore  CNAME  Cells.spec  LICENSE  README.md  asset-manifest.json  document we'll serialize it into dictionary and then store it in a  index.html  precache-manifest.25455deb087a9416632530864a2d569a.js  precache-manifest.2dbf31be7e413c9f72efb42f689db349.js  precache-manifest.440caf61fb700c92aba8649e33f6f1e4.js  precache-manifest.469ba7b1b270bbeea9f543fb8f0a93fc.js  precache-manifest.58862b46834c61e16e0628ddb8f5a7cb.js  precache-manifest.78ecb1724db00d8867f752c082868bad.js  precache-manifest.7a9c7549083075b0484c169cbff88e74.js  precache-manifest.7da05674c015c35d0beb21683c36efea.js  precache-manifest.7de3de7b7eadf85077e82996b5fad05e.js  precache-manifest.86c96b8d0c1d8d46c30e8469b724772a.js  precache-manifest.9572cc832155e153d986aa6ec70363bd.js  precache-manifest.adad98662e2a403d4d2631d6dc273f70.js  precache-manifest.ae90dc14d4f48aa65d1bbb0b567a34ae.js  precache-manifest.b50794f45c07e0194a82eea941299644.js  precache-manifest.b7a31f7242f5ce0e69eac87d9bbf2406.js  precache-manifest.bedbfecde23ca67e492a2d89faa3e196.js  precache-manifest.c3ffdb44d23317a20e826ce956d85d91.js  precache-manifest.ca2b716c8d2b4fe235b21c4ea5cfb1fd.js  precache-manifest.e2c14ef1110d84736f352293e807b315.js  precache-manifest.f1e03c4f79c75dcd82e618c554035596.js  pyproject.toml  service-worker.js  test.py  test.sh  ttt.cells
cells/: __init__.py  __main__.py  backend.py  cells.py  cli.py  model.py  observation.py  observer.py  settings.py  utility.py
cells/events/: app.py  (+6 more)
hooks/: hook-PySide2.QtWebEngineWidgets.py
packaging/: Cells.spec  publish.sh  unpublish.sh
resources/: Cells.tmTheme
site/: package.json
tests/: test_cells.py  test_observation.py  test_observer.py
(+180 files in other folders)
