[tool.poetry]
name = "cells"
version = "1.0.0-beta1"
description = "Live coding environment."
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cells = "cells.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
pyside2 = "^5.13.1"
rx = "^3.0.1"
appdirs = "^1.4.3"
toml = "^0.10.0"
dataclasses_json = "^0.3.5"
"delegator.py" = "^0.1.1"
asyncqt = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=1.0.0b3"]
build-backend = "poetry.masonry.api"
